Fixed ToC dark mode color

--- a/resources/components/darkmode.less
+++ b/resources/components/darkmode.less
@@ -171,12 +171,11 @@
 
 	a.mw-wiki-title,
 	.mw-body-content #mw-content-text .mw-parser-output #toc a {
-		color: @dark-text-70;
+		color: @dark-text-70 !important;
 	}
 
-	.mw-body-content #mw-content-text .mw-parser-output #toc:before,
-	.mw-body-content #mw-content-text .mw-parser-output #toc:after {
-		background: linear-gradient( @dark-bg-0, rgba( 0, 0, 0, 0.001 ) );
+	.mw-body-content #mw-content-text .mw-parser-output #toc {
+		color: @dark-text-60;
 	}
 
 	#page-tools #p-views li > a:after,
